# openapi-gen

./: Cargo.toml  README.md
.github/workflows/: rust_tests.yml
apigen-core/: Cargo.toml
apigen-core/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs  some_site.json  test.rs
example_specs/: some_site.json
fixtures/: simple_site.json
macro/: Cargo.toml
macro/src/: lib.rs
openapi-gen-core/: Cargo.toml
openapi-gen-core/src/: lib.rs  op.rs  path.rs  refs.rs  request.rs  response.rs  schema.rs  utils.rs
openapi-gen-core/src/schema/: headers.rs  parameters.rs  to_schema.rs  value.rs
openapi-gen-core/tests/: petstore_snapshot.rs  simple_site.json  simple_site.rs  simple_site_snapshot.rs  snapshots.rs  utils.rs
openapi-gen-core/tests/snapshots/: petstore.expected.rs  simple_site.expected.rs
openapi-gen-macro/: Cargo.toml
openapi-gen-macro/src/: lib.rs
usage-example/: Cargo.toml
usage-example/src/: main.rs  some_site.json
