[package]
name = "openapi-gen-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.51"
openapiv3 = "1.0.2"
serde_json = { version = "1.0.92", features = ["preserve_order"] }
darling = "0.14.2"

[dev-dependencies]
prettyplease = "0.1.23"
similar = "2.2.1"
